**2013 Mar 06**
merged branch copy/mpove
updated branch to current functions

**2013 Mar 05**
added .gitignore
added Doxygen documentation

**2013 Mar 03**
merged branch apriori
updated apriori to current functions

**2013 Mar 02**
Corrected Makefile
Deleted branch - generalize_metadata
removed deprecated headers

**2013 Mar 01**
Apriori Implementation: Show file suggestions while browsing

**2013 Feb 28**
fixed memory leaks in formatting strings in metadata
fixed memory leaks in freeind metadata structures
add apriori implementation for file suggestion

**2013 Feb 27**
fixed memory leaks on filesystem umount
plugin system through dynamic SO
modified sample Makefile
seperated files into git folders

**2013 Feb 26**
apriori working on kwest database
plugin system integrated
generalized metadata extraction format

**2013 Feb 25**
apriori working for sample dataset

**2013 Feb 21**
created static plugin structure
apriori algorithm implementation

**2013 Feb 16**
corrected group id and owner display - both are now current_user

**2013 Feb 07**
corrected datatypes for database tables

**2013 Feb 03**
fixed bug : Trying to redirect stderror to file in a non-existent folder
Commenting for Doxygen

**2013 Feb 02**
added operation fuse_destroy
calls database close, logfile close on fs unmount

**2013 Jan 27**
Used stdbool.h as per c99 standard to define the boolean type

**2013 Jan 25**
Implemented function to Check Path Validity 
Refactor dbkey, extract_audio_taglib files
Convert extracted tags to title case

**2013 Jan 16**
removed remove_file error regarding dangling reference in database
fixed some more memory leaks
worked on previos code refactoring
added read, open, write, truncate, release, rename
working: ls cd cp mv cat rm mkdir rmdir chmod chown

**2013 Jan 15**
fixed code for mkdir, added code for rename_file function
working: ls cd rm rmdir mkdir

**2013 Jan 14**
corrected errors related to magic strings, formatting, pointer corrections, path parsing